--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
+.classpath
+.project
+eclipse-classes
+classes
+dist
+src/nu/validator/servlet/FormEmitter.java
+src/nu/validator/servlet/PageEmitter.java
+src/nu/validator/localentities/files/
+
 target
 .hg*
